chore: fix tabs css on mobile and add routing on each card

--- a/Frontend/src/GlobalStyles.css
+++ b/Frontend/src/GlobalStyles.css
@@ -4,3 +4,7 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
+a{
+    text-decoration: none;
+  }
