--- a/Frontend/src/components/Course/course.module.css
+++ b/Frontend/src/components/Course/course.module.css
@@ -22,6 +22,11 @@
   border-bottom: 1px solid #373737;
 }
 
+.course__wrapper img {
+  width: 100%;
+  height: 100%;
+}
+
 .course__name {
 font-size: 18px;
 }
