--- a/Frontend/src/components/Tabs/tabs.module.css
+++ b/Frontend/src/components/Tabs/tabs.module.css
@@ -40,6 +40,12 @@
   background-color: #fff;
 }
 
+@media screen and (min-width: 1024px) {
+  .tabs__box {
+    width: 80%;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .tabs__box {
     width: 100%;
@@ -49,6 +55,9 @@
     padding: 10px;
     font-size: 16px;
   }
+  .tabs__tab-active:after {
+    margin-bottom: -14px;
+}
 }
 
 @media screen and (max-width: 425px) {
@@ -56,7 +65,18 @@
     padding: 10px;
     font-size: 12px;
   }
-  ._tabs__tab-active_1tg85_27:after {
+  ._tabs__tab-active:after {
     margin-bottom: -10px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .tabs__tab {
+    padding: 3px;
+    font-size: 12px;
+  }
+  ._tabs__tab-active:after {
+    margin-bottom: -5px;
+  }
+}
+
